# memo

./: .env.example  .gitignore  AGENT_PROMPT.md  CHANGELOG.md  HANDOFF.md  HANDOFF.md.bak  README.md  SKILL.md  desktop.bat  desktop_install.bat  full_install.bat  index.html  install.bat  install_agent.bat  mcp_config.example.json  package-lock.json  package.json  pyproject.toml  requirements.txt  start_all.bat  stop_all.bat  test.bat  upgrade.bat  vite.config.js  产品改进和优化思路.md  项目问题排查结果.md
desktop/: companion.css  companion.html  companion.js  main.cjs  preload.cjs
docs/: V0.3.0-优化方案.md  V0.4.0-优化方案.md  V0.6-人格引擎-架构设计.md  V0.7-待办管理-设计方案.md  V0.9-episode-memory-and-agent-import-plan.md  V0.9-source-aware-final-execution-plan.md  architecture.md  context-space-dev-progress.md  context-space-roadmap.md  deploy-guide.md  desktop-companion-plan.md  memory-governance-optimization-roadmap.md  non-developer-install-guide.md  p1-p3-governance-persona-space-progress.md  portable-release-guide.md  project-organization-final-plan.md  project-organization-next-todos.md  promotion-guide.md  setup-guide.md  testing-guide.md
memo/: __init__.py
memo-project/: .env.example  AGENT_PROMPT.md  CHANGELOG_20260629.md  config.py  consolidation.py  database.py  dedup.py  deploy-guide.md  engine.py  extractor.py  init_db.py  mcp_config.example.json  memo_dashboard.py  memo_watcher.py  quick_check.py  quick_test.py  run_mcp.py  start_all.bat  test_integration_phase1.py  test_mcp_smoke.py  test_v020.py  use_memo.py  verify_all.py  verify_context.py  verify_deps.py
scripts/: _clean_legacy.py  (+24 more)
(+110 files in other folders)
